--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
   <footer style="margin-top: 3rem; font-size: 0.9rem; color: var(--secondary-text); text-align:center;">
     <p>
-      <strong>Angaben gemäß Offenlegungspflicht nach § 25 Mediengesetz</strong>
+      <strong>Angaben gemäß Offenlegungspflicht nach §&nbsp;25 Mediengesetz</strong>
     </p>
     <p>
-      Medieninhaber und verantwortlich für den Inhalt:<br>
+      Medieninhaber:<br>
       Thomas Mitzka<br>
       Wien, Österreich<br>
     </p>
