--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Thomas Mitzka unterstützt Unternehmen mit seiner Erfahrung in Digitalisierung, agiler Software-Entwicklung und erfolgreicher Stakeholder-Kommunikation.">
   <title>Thomas Mitzka</title>
   <link rel="stylesheet" href="styles.css">
 </head>
